# HabitusDOCS

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
about/: index.html
docs/: about.md  index.md  resources.md
docs/assets/images/: habitus_example_folder.drawio
docs/examples/: complete.md  index.md  spatiotemporal_behaviour_analysis.md
docs/gis/: index.md
docs/gps/: index.md
docs/gui/: index.md
docs/home/: about.md  changelog.md  index.md  overview.md
examples/spatiotemporal_behaviour_analysis/: index.html
gis/: index.html
gps/: index.html
gui/: index.html
resources/: index.html
search/: search_index.json
